# MailSora

./: .gitignore  README.md  README_CN.md  main.py  main_gradio.py  pyproject.toml  requirements.lock.txt  requirements.txt  requirements_backup.txt
src/email_fetcher/: email_fetcher_api.py
src/podcast_generator/: podcast_generater.py
src/summarizer/: document_loader.py  retrieval.py  summarizer.py
src/utils/: clean_duplicate_mails.py  mails_sorter.py
