[project]
name = "mailsora"
version = "0.1.0"
description = "Agentic podcast generator using email"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "coqui-tts" >= "0.26.0",
    "google-api-python-client" >= "2.0.4",
    "google-auth" >= "2.24.0",
    "google-auth-httplib2" >= "0.1.0",
    "google-auth-oauthlib" >= "1.0.0",
    "langchain" >= "0.3.25",
    "langchain-core" >= "0.3.59",
    "langchain-community" >= "0.3.21",
    "langchain-ollama" >= "0.2.10",
    "langchain-deepseek" >= "0.2.10",
    "langgraph" >= "0.2.10",
    "langsmith" >= "0.2.10",
    "bs4" >= "0.2.10",
    "torch" >= "2.3.1",
    "gradio" >= "4.55.0",
    "pydub" >= "2.1.0",
    "unstructured" >= "0.2.10",
    "langchain-huggingface" >= "0.2.10",
]
