[project]
name = "mailsora"
version = "0.1.0"
description = "Agentic podcast generator using email"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "coqui-tts",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-ollama",
    "langchain-deepseek",
    "langgraph",
    "langsmith",
    "bs4",
    "torch",
    "gradio",
    "pydub",
    "unstructured",
    "langchain-huggingface"
]
